// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/search_results/MessagesOrFilesSelector should match snapshot, on files selected 1`] = `
<div
  className="MessagesOrFilesSelector"
>
  <div>
    <span
      className="tab"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Messages"
        id="search_bar.messages_tab"
      />
      <span
        className="counter"
      >
        5
      </span>
    </span>
    <span
      className="active tab"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Files"
        id="search_bar.files_tab"
      />
      <span
        className="counter"
      >
        10
      </span>
    </span>
  </div>
  <FilesFilterMenu
    onFilter={[MockFunction]}
    selectedFilter="filter"
  />
</div>
`;

exports[`components/search_results/MessagesOrFilesSelector should match snapshot, on messages selected 1`] = `
<div
  className="MessagesOrFilesSelector"
>
  <div>
    <span
      className="active tab"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Messages"
        id="search_bar.messages_tab"
      />
      <span
        className="counter"
      >
        5
      </span>
    </span>
    <span
      className="tab"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Files"
        id="search_bar.files_tab"
      />
      <span
        className="counter"
      >
        10
      </span>
    </span>
  </div>
</div>
`;
